fix touchscroll on mobile

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -315,11 +315,11 @@
         display: block;
     }
     #header #name-container{
-        top: 10%;
+        top: 6%;
         margin: 0;
         display: inline-block;
         height: auto;
-        width: 80%;
+        width: 90%;
         text-align: center;
         
     }
